--- a/iafas/src/main/webapp/mainCompromisoMensual.xhtml
+++ b/iafas/src/main/webapp/mainCompromisoMensual.xhtml
@@ -56,7 +56,7 @@
                     <p:commandButton  value="Nuevo"  styleClass="button" action="#{mbCompMensual.nuevoRegistro()}" ajax="false"
                     style="height:30px;" title="Click aqui para Ingresar un Nuevo Compromiso Mensual"/>
                 </p:panelGrid>
-                <p:outputLabel value="#{mbCompAnual.reg} Registros Encontrados" style="color: green; font-weight: bold;"/>
+                <p:outputLabel value="#{mbCompMensual.reg} Registros Encontrados" style="color: green; font-weight: bold;"/>
                 <br/>
                 <table>
                     <tr>
