--- a/iafas/src/main/webapp/insRegistroFamilia.xhtml
+++ b/iafas/src/main/webapp/insRegistroFamilia.xhtml
@@ -11,9 +11,12 @@
         <link href="css/estilos.css" rel="stylesheet" type="text/css" />
 		<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>	
     </h:head>
-    <h:body class="formulario">
+    <body class="formulario">
     <script>
-       
+         function upperCase(obj) {
+        	  var x = document.getElementById(obj);
+        	  x.value = x.value.toUpperCase();
+        	}
     </script>
         <h:form id="frmInsRegFamilia" enctype="multipart/form-data">
               <p:messages id="mensaje" showDetail="true" autoUpdate="true" closable="true" globalOnly="true"/>
@@ -42,15 +45,15 @@
                             <p:outputLabel value="APELLIDO PARTENO: "/>
                             <h:inputText id="apepar" value="#{mbPersonal.vpersonaPaterno}"
                             styleClass="input" style="text-align: left;" size="50"
-                            maxlength="200"/> 
+                            maxlength="200" onkeyup="upperCase(this.name)"/> 
                             <p:outputLabel value="APELLIDO MATERNO: "/>
                             <h:inputText id="apemat" value="#{mbPersonal.vpersonaMaterno}"
                             styleClass="input" style="text-align: left;" size="50"
-                            maxlength="200"/> 
+                            maxlength="200" onkeyup="upperCase(this.name)"/> 
                             <p:outputLabel value="NOMBRE: "/>
                             <h:inputText id="nom"  value="#{mbPersonal.vpersonaNombres}"
                             styleClass="input" style="text-align: left;" size="50"
-                            maxlength="200"/>                                                                                        
+                            maxlength="200" onkeyup="upperCase(this.name)"/>                                                                                        
                             <p:outputLabel value="FECHA DE NACIMIENTO: "/>
                             <h:panelGrid columns="2" >
                                 <p:inputMask id="fec_doc" mask="99/99/9999" size="12" value="#{mbPersonal.dpersonaNacimiento}" styleClass="input">
@@ -84,7 +87,7 @@
                             <p:outputLabel value="DIRECCION: "/>
                             <h:inputText id="dir"  value="#{mbPersonal.vpersonaDireccion}"
                             styleClass="input" style="text-align: left;" size="50"
-                            maxlength="500"/>   
+                            maxlength="500" onkeyup="upperCase(this.name)"/>   
                             <p:outputLabel value="CORREO: "/>
                             <h:inputText id="corr"  value="#{mbPersonal.vpersonaCorreo}"
                             styleClass="input" style="text-align: left;" size="50"
@@ -102,5 +105,5 @@
                 <br/>               
             </p:panel>
         </h:form>
-    </h:body>
+    </body>
 </html>
