Modificaciones al modulo de girado

--- a/iafas/src/main/webapp/mainPrincipal2.xhtml
+++ b/iafas/src/main/webapp/mainPrincipal2.xhtml
@@ -110,7 +110,7 @@
                             </div>
                         </div>
                         <a href="index.html">
-                            <img class="img-fluid" src="material_able-main/assets/images/logo.png" alt="LOGO IAFAS" />
+                            <img class="img-fluid" src="img/logo_banner.png" alt="LOGO IAFAS"  width="170" height="300" />
                         </a>
                         <a class="mobile-options waves-effect waves-light">
                             <i class="ti-more"></i>
