--- a/iafas/src/main/webapp/insRegistroPersonal.xhtml
+++ b/iafas/src/main/webapp/insRegistroPersonal.xhtml
@@ -11,7 +11,7 @@
         <link href="css/estilos.css" rel="stylesheet" type="text/css" />
 		<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>	
     </h:head>
-    <h:body class="formulario">
+    <body class="formulario">
     <script>
        function upperCase(obj) {
         	  var x = document.getElementById(obj);
@@ -127,5 +127,5 @@
                 <br/>               
             </p:panel>
         </h:form>
-    </h:body>
+    </body>
 </html>
